fixing overlap problem

--- a/website/main.css
+++ b/website/main.css
@@ -228,3 +228,12 @@ h2 { font-size: 1.3em; }
     padding-left: 20px;
 }
 
+/* ==========================================================================
+   Quick fixes
+   ========================================================================== */
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
